# learn-ml

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  temp.ipynb  tempCodeRunnerFile.python
ARCHIVE/dashboard_agent/: package.json  pnpm-lock.yaml
ARCHIVE/dashboard_agent/src/: agent.ts  index.ts
ARCHIVE/dashboard_ui/src/: App.tsx
ARCHIVE/learn_pandas/created/: output.xlsx
ARCHIVE/learn_visualization/: main.ipynb
ARCHIVE/test/: cookies.txt  rahul_mehta_links.md
OCR/: README.md  groq_llm.py  instruction.py  main.py  output.json  pyproject.toml
dashboard_agent/: pnpm-lock.yaml
dashboard_ui/: package.json  pnpm-lock.yaml
dashboard_ui/src/: App copy.tsx
ds/learn_numpy/: 1.py  2.py
ds/learn_pd/: 1.ipynb
ds/learn_pd/created/: output.xlsx
learn_MCP/: main.ipynb
learn_adk/.adk/: session.db
learn_adk/chart_agent/: agent.py  chart_tools.py
learn_adk/chart_agent/.adk/: session.db
learn_adk/db_agent/: agent.py  db_functions.py
learn_adk/db_agent/.adk/: session.db
learn_adk/my_agent/: agent.py  db_functions.py
learn_adk/my_agent/.adk/: session.db
learn_adk/my_another_agent/: agent.py
learn_adk/my_another_agent/.adk/: session.db
learn_adk/orchestrator/: agent.py
learn_adk/orchestrator/.adk/: session.db
learn_adk/test_adk_mcp/: agent.py
learn_adk/test_adk_mcp/.adk/: session.db
learn_ai/: main.ipynb
learn_dspy/: basics.ipynb  embd_for_faiss.jsonl  multi_hop_rag.ipynb  mydb.sqlite  pyproject.toml  rag.ipynb  react.ipynb  temp.jsonl  test.ipynb
learn_dspy/embeddings/: config.json  corpus_embeddings.npy
learn_dspy/memory/: embed.py  example.txt  mem.py  neo4j_embed.py  qd_rag.py
learn_numpy/: Cleaned_Indian_Employee_Data.csv  Fixed_Indian_Employee_Data.csv  np.ipynb  project.ipynb
learn_pandas/: main.ipynb
learn_pandas/created/: output.csv  output.json
learn_pd/: pd.ipynb
learn_pd/created/: output.xlsx
learn_rag/: AI_Response.md  main.ipynb
learn_visualization/: main.ipynb
mcp_server/: adk_mcp_http.py  adk_mcp_server.py  db_fastmcp.py  demo.py  hello.md  inference.py  main.py  proxy_mcp.py  test.py
neo-lang/: bhagat_singh.ipynb  bhagat_singh.txt  docker-compose.yml  example.txt  test.ipynb  test.txt
server/: database.sqlite
server/src/: index.ts
test/: rahul_mehta_content.json  rahul_mehta_links.json  test.ipynb  test_1.py
